Projet GL/test/src/test/deca/context/valid/increment6/Object-in-method.deca
// Test Object in a method

// Historique : cree le 21/01/2023

class A{
    protected int x;

    void m(Object o){
        x = 2;
    }
}