Projet GL/test/src/test/deca/context/invalid/increment6/protected.deca
// Test rule 3.66 condition 2

// Historique : cree le 18/01/2023

class A{
    protected int x;
}

class X{
    void m(){
        A a = new A();

        // Must be refused
        println(a.x); // x is protected
    }
}